--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,12 @@ body {
     margin: 0 0 20px 0;
 }
 
+.company-container-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .work-experience-education-date {
     font-style: normal;
     font-weight: normal;
